Creating event-message for food and order service using rabbitmq

--- a/FoodService/FoodService.csproj
+++ b/FoodService/FoodService.csproj
@@ -9,8 +9,13 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Plain.RabbitMQ" Version="0.0.0.4" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MessageBrokerLibrary\MessageBrokerLibrary.csproj" />
   </ItemGroup>
 
 </Project>
