--- a/OrderService/OrderService.csproj
+++ b/OrderService/OrderService.csproj
@@ -13,8 +13,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Plain.RabbitMQ" Version="0.0.0.4" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MessageBrokerLibrary\MessageBrokerLibrary.csproj" />
   </ItemGroup>
 
 </Project>
